p2/config/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "app1.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app-one
            port:
              number: 80
  - host: "app2.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app-two
            port:
              number: 80
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app-three
            port:
              number: 80
